src/objects/loan__Loan_Payment_Transaction_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Payment Transaction Interface</relationshipLabel>
        <relationshipName>Loan_Payment_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Payment Transaction Interface</relationshipLabel>
        <relationshipName>Loan_Payment_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Custom_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Payment Processing Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Loan Payment Transaction Interface</relationshipLabel>
        <relationshipName>Loan_Payment_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees component for this payment</description>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_Id__c</fullName>
        <label>Incoming Loan Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest component for this payment.</description>
        <label>Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Transaction Interface</relationshipLabel>
        <relationshipName>Loan_Payment_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Manual_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode Id</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Loan Payment Transaction Interface</relationshipLabel>
        <relationshipName>Loan_Payment_Transaction_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode_Name__c</fullName>
        <label>Payment Mode Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <description>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Record has been created in target system
Post-Import Valid - Post record creation validations completed
Error - Record is in error state</description>
        <inlineHelpText>Pre-Import - Record has just been created in interface table
Pre-Import Valid - Record has passed pre-import validations
Record Created - Target record created
Post-Import Valid - Post record creation validations completed
Error - Record in error</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Import</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Import Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <description>Transaction Amount</description>
        <inlineHelpText>Transaction Amount</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <description>Transaction Date</description>
        <inlineHelpText>Transaction Date</inlineHelpText>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off_Recovery_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write Off Recovery Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Payment Transaction Interface</label>
    <nameField>
        <displayFormat>LPTIID-{0000000000}</displayFormat>
        <label>Loan Payment Transaction Interface ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Transaction Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Negative_Values_Check</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Fees__c &lt;0 ,
 loan__Interest__c &lt;0,
 loan__Principal__c &lt;0,
 loan__Transaction_Amount__c &lt;0
)</errorConditionFormula>
        <errorMessage>Amount must be positive.</errorMessage>
    </validationRules>
</CustomObject>